# parser-playground

./: .gitignore  parser-playground.cabal
src/Data/String/: Parser.hs
src/Data/Text/: Parser.hs
test/: Spec.hs
