name:                parser-playground
version:             0.1.0.0
synopsis:            Simple parser combinator library
description:         Please see README.md
homepage:            https://github.com/agrafix/parser-playground#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann
maintainer:          mail@athiemann.net
copyright:           2016 Alexander Thiemann <mail@athiemann.net>
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Text.Parser
  build-depends:       base >= 4.7 && < 5
                     , text
  default-language:    Haskell2010

test-suite parser-playground-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src, test
  main-is:             Spec.hs
  build-depends:       base
                     , HTF
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  cpp-options:         -DTEST_SUITE
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agrafix/parser-playground
